fixed add member not showing on household list

--- a/survey/static/css/application.less
+++ b/survey/static/css/application.less
@@ -112,3 +112,14 @@ label.error{
     color: red !important;
     font-weight: bold !important;
 }
+
+ul.ms-list {
+    height: 200px;
+    overflow-y: auto;
+    padding: 0;
+    width: 450px;
+}
+
+.ms-container {
+    background: url("../img/switch.png") no-repeat scroll 450px 80px transparent;
+}
